[package]
name = "rpmdb"
version = "0.1.0"
edition = "2021"
authors = [
    "yybit <yybit2@gmail.com>",
]
license = "MIT"
homepage = "https://github.com/yybit/rpmdb-rs"
repository = "https://github.com/yybit/rpmdb-rs"
description = "Rust implementation of rpmdb"
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }

anyhow = "1.0.75"
thiserror = "1.0.50"

rusqlite = "0.30.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", default-features = false, features = ["fs"] }
